# jch-private

./: AI_SERVICE_DOCUMENTATION.md  COMPANY_EMAIL_VERIFICATION_SYSTEM.md  DATABASE_SCHEMA_DOCUMENTATION.md  README.md  SERVER_STARTUP_GUIDE.md  SPRING_BOOT_AI_INTEGRATION_SUMMARY.md  database-schema.sql  docker-compose.yml  init.sql  initial-data.sql  pom.xml  quick-start.bat
ai-service/: .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  README.md  README_UV환경설정.md  README_환경설정.md  activate_env.bat  basic_test.py  complete_ai_server.py  fix_dependencies.bat  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup_env.bat  setup_uv_env.bat  simple_chatbot_server.py  test_all_endpoints.py  test_api_client.py  test_chatbot_api.py  test_integration.py  test_runner.py  test_server.py  test_simple_api.py  uv_commands.bat
ai-service/config/: __init__.py  settings.py
ai-service/data/chatbot_index/: default__vector_store.json  docstore.json  index_store.json
ai-service/data/interview_records/: user_40.json  user_41.json
ai-service/knowledge_base/: faq_data.txt
ai-service/models/: __init__.py  schemas.py
ai-service/resume_dataset/: 기업 분석.txt  나의 장점.txt  성장과정.txt  지원 동기.txt  커뮤니케이션.txt  포트폴리오 분석.txt
ai-service/routers/: __init__.py  chatbot.py  cover_letter.py  image_generation.py  interview.py  sentiment.py  simple_apis.py  translation.py
ai-service/services/: __init__.py  chatbot_service.py  enhanced_interview_service.py  enhanced_openai_service.py  image_service.py  interview_service.py  openai_service.py  pdf_service.py  professional_interview_service.py  rag_service.py  translation_service.py
ai-service/tests/: __init__.py  test_all_services.py  test_chatbot_api.py  test_chatbot_service.py  test_cover_letter_integration.py  test_final_working.py  test_integration_comprehensive.py  test_working_endpoints.py
ai-service/utils/: security.py
backend/: .env.example  .gitignore  HashPassword.java  build.gradle  hash_output.txt
docs/: README.md  SETUP.md  attribute_naming_mapping.md  database_schema.sql
frontend/: .env  .env.local  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: ai-integration.spec.ts  ai-services.spec.ts  auth-helper.ts  auth.spec.ts  dashboard.spec.ts  debug.spec.ts  home.spec.ts  integration-test.spec.ts  jobs.spec.ts  login.spec.ts  register.spec.ts
frontend/playwright-report/: index.html
frontend/public/: test-api.html
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/__tests__/: App.integration.test.tsx  smoke.test.ts
frontend/src/components/: AdminLayout.tsx  AdminRouteGuard.tsx  Header.tsx  (+2 more)
types/: api.ts
(+344 files in other folders)
