[project]
name = "jbd-ai-service"
version = "1.0.0"
description = "잡았다 플랫폼 AI 서비스 - 챗봇, 면접, 자소서 생성 등 AI 기능 제공"
authors = [
    { name = "JBD Team", email = "dev@jbd.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "openai>=1.6.1,<2.0.0",
    "langchain>=0.1.0,<0.3.0",
    "langchain-openai>=0.0.5,<0.2.0",
    "langchain-community>=0.0.20,<0.3.0",
    "chromadb>=0.4.18,<0.6.0",
    "pypdf2==3.0.1",
    "python-multipart==0.0.6",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "pillow>=10.1.0,<11.0.0",
    "requests>=2.31.0,<3.0.0",
    "numpy>=1.24.3,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "llama-index>=0.9.6,<0.12.0",
    "llama-index-llms-openai>=0.1.5,<0.3.0",
    "llama-index-embeddings-openai>=0.1.6,<0.3.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "reportlab>=4.4.3",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
]
dev = [
    "black==23.12.0",
    "isort==5.13.2",
    "flake8==6.1.0",
    "mypy==1.8.0",
]

[project.urls]
Homepage = "https://github.com/jbd-team/ai-service"
Repository = "https://github.com/jbd-team/ai-service"
Issues = "https://github.com/jbd-team/ai-service/issues"

# [project.scripts] - 스크립트 섹션 제거 (명령행에서 직접 실행)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["services", "models", "routers", "config"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
